# s6

./: Makefile  configure  configure.ac
.github/workflows/: docker-image.yml
Docker/: Dockerfile
alpine/edge/: Dockerfile  Makefile
alpine/latest/: Dockerfile  Makefile
alpine/template/: Dockerfile.in  Makefile.in
